syntax = "proto3";

package openaiserver.api.v1;

option go_package = "server/openai-server/api/v1;v1";

import "google/api/annotations.proto";
import "validate/validate.proto";

service JointCloudService {
    // 查询任务列表
  rpc ListJointCloudJob (ListJointCloudJobRequest) returns (ListJointCloudJobReply) {
    option (google.api.http) = {
      get: "/v1/jointcloudmanage/job"
    };
  }
}

message JointCloudParam {
	string key = 1;
	string value = 2;
}

message JointCloudResourceParam {
	string name = 1;
	string size = 2;
}

message ListJointCloudJobRequest {
    int32  pageIndex = 1;
    int32  pageSize = 2;
    string ids = 3;
}
  
message ListJointCloudJobReply {
  int32  totalSize = 1;
  repeated JointCloudJReplyJob list = 2;
}
  
message JointCloudJReplyJob {
  string  taskId = 1;  
  string	taskName  = 2;                           
  string	interpreter   = 3;                      
  string	framework = 4;                  
  string	cloudVendorId = 5;                        
  string	execCommand = 6;                   
  string	outputPath = 7;                     
  string	status = 8;                       
  string	remark = 9;                           
  repeated JointCloudReplyDataSetVersionVo	dataSetVersionList = 10;
  repeated JointCloudParam	params = 11;
  repeated JointCloudResourceParam	resourceParams = 12;
}
  
message JointCloudReplyDataSetVersionVo {
  string category = 1;   
  string dataSetCode = 2;
  string version = 3; 
  string remark = 4;
}